# Trendkept

./: CLAUDE.md  CRITIQUE_Owners_Manual.md  CRITIQUE_Owners_Manual_v2.md  Daily_Check.bat  README.md  Start_Dashboard.bat  archie_bot.py  pyproject.toml  trendkept_bot.py  trendrail_bot.py  wrangler.jsonc
.claude/skills/: README.md
.github/workflows/: paper-pilot.yml  tests.yml  trend-check-draft.yml
archie/: __init__.py  alpaca.py  cli.py  data.py  fetch.py  indicators.py  strategy.py  web.py
business/: CONTENT_STRATEGY.md  CRO_AUDIT.md  FINANCE_BRIEF.md  FINANCIALS.md  GO_TO_MARKET.md  LAUNCH_CHECKLIST.md  LEGAL.md  PAPER_TRADING_GUIDE.md  PLAN.md  START_HERE.md  TRADING_STYLES.md  Trendkept_Owners_Manual.html  Trendrail_Owners_Manual.html  build_manual.py  metrics.csv  model.py  paper_log.csv
business-plan/: 01-business-model.md  02-legal-compliance.md  03-product-and-sourcing.md  04-unit-economics.md  05-marketing-acquisition.md  06-ai-automation-stack.md  07-operations-fulfillment.md  08-risk-register.md  09-90-day-roadmap.md  README.md
business-plan/api/: README.md  catalog.py  claims.py  server.py
business-plan/site/: app.js  index.html  styles.css
examples/: generate_sample.py  sample_uptrend.csv
site/: index.html  llm.txt  robots.txt  sitemap.xml
tests/: test_alpaca.py  test_autopilot.py  test_backtest.py  test_data.py  test_fetch.py  test_indicators.py  test_journal.py  test_manage.py  test_ruleset_styles.py  test_strategy.py  test_trend_check.py  test_web.py
trendkept/: __init__.py  alpaca.py  backtest.py  cli.py  data.py  fetch.py  journal.py  strategy.py  web.py
trendrail/: __init__.py  alpaca.py  cli.py  fetch.py  strategy.py  web.py
(+46 files in other folders)
