[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trendrail"
version = "0.1.0"
description = "A dependency-free trend-following backtesting and signal toolkit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["trading", "trend-following", "backtesting", "technical-analysis"]
dependencies = []

[project.scripts]
trendrail = "trendrail.cli:main"
trendrail-web = "trendrail.web:main"

[tool.setuptools]
packages = ["trendrail"]
