[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trendkept"
version = "0.1.0"
description = "A dependency-free trend-following backtesting and signal toolkit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["trading", "trend-following", "backtesting", "technical-analysis"]
dependencies = []

[project.scripts]
trendkept = "trendkept.cli:main"
trendkept-web = "trendkept.web:main"

[tool.setuptools]
packages = ["trendkept"]
